3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/treasure.c: Change the loading of the artifacts file to actually
  calloc() the object - reset_object() doesn't clear all the values,
  like active_next, active_prev, so better to just do it there.
server/main.c: Add code in process_events() that checks for removed objects -
   have seen occasional crashes caused by them.
MSW 2004-05-08

Armor enchantment now uses setting values.
common/init.c: new values to init in settings.
include/global.h: new setting values.
include/config.h: new default values for settings.
lib/settings: explanation for those new values.
server/apply.c: change armor improvement code to use setting values.
server/init.c: read new settings.
Ryo 2004-05-08

common/init.c: there's a #define LOGFILE, use it instead of hardcoded value.
include/config.h: change default logfile path to previous value in init.c.
server/c_wiz.c: Fix 'nodm' displaying incorrect messages, and forgetting to
   update player count on map.
Ryo 2004-05-08

server/apply.c: Fix apply_special() to properly deal with LAMP objects - it
   wasn't dealing properly with the split off lamp compared to the one it
   was supposed to deal with - was crashing server.
MSW 2004-05-04

common/item.c: describe_monster() - print luck when describing players (fixex
   perceive self not showing luck)
server/attack.c: kill_object() - don't give player exp if he kills himself -
   compare owner against what was killed, not the hitter.
server/pets.c: summon_object() - move breaking out for last treasurelist
   after we set the last valid treasurelist - otherwise, the list entry for